Order packaging tests by packaging type. Helps to produce stable test logs